@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <!-- generated by ThinG, the Thinlet GUI editor -->
 <panel bottom="5" columns="1" gap="5" left="5" right="5" top="5" weightx="1">
+    <label alignment="center" icon="/logo.png"/>
     <button action="new game" i18n="true" mnemonic="78" text="mainmenu.newgame" weightx="1"/>
     <button action="load game" i18n="true" mnemonic="76" text="mainmenu.loadgame"/>
     <button action="manual" i18n="true" mnemonic="72" text="mainmenu.help"/>
